--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "muicss": "^0.9.38",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
